--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,11 @@
 
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>lviv.vao.ua.LoginServlet</servlet-class>
+    <servlet-class> lviv.vao.ua.LoginServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/login</url-pattern>
+    <url-pattern>/re</url-pattern>
   </servlet-mapping>
 </web-app>
